Tests/Runtime2/Error/Handling/.build/throwerror.pr
[
  {
    "name": "ThrowError",
    "description": "Build goal ThrowError with a single throw step.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022something went wrong\u0022",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "something went wrong",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/ThrowError.goal",
    "prPath": "/.build/throwerror.pr",
    "hash": "760733522882f786b33a29656b13a929e3aabde1a27dbce83d60c95e0290a596",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]